# FastAPI_example

./: .backend_example  .gitignore  .ngrok_example  Dockerfile  Makefile  README.md  certs.ps1  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/: __main__.py
backend/src/api/v1/endpoints/: auth.py  healthcheck.py  user.py
backend/src/api/v1/handlers/auth/: login.py
backend/src/api/v1/handlers/user/: create.py  delete.py  get_current.py  update.py
backend/src/cache/core/: client.py
backend/src/common/converters/: cache.py  database.py  user.py
backend/src/common/dto/: healthcheck.py  user.py
backend/src/common/interfaces/: context.py  crud.py  gateway.py  hasher.py
backend/src/core/: logger.py  settings.py
backend/src/database/: factory.py  gateway.py
backend/src/database/core/: connection.py  manager.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 2eea52fcac3b_initial_tables.py
backend/src/database/models/: user.py
backend/src/database/models/base/mixins/: with_id.py
backend/src/database/repositories/: base.py  crud.py  user.py
backend/src/services/: gateway.py  gateway_factory.py  user.py
backend/src/services/security/: bcrypt_hasher.py  token_jwt.py
backend/src/settings/: app.py  dependencies.py  endpoints.py
backend/src/utils/: singleton.py
backend/src/utils/providers/: stub.py
frontend/: package-lock.json  package.json
ngrok/: settings.yaml
scripts/: certs.sh
user_service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
(+55 files in other folders)
